--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <img src="Soos.png" alt="soos" width="120" height="250">
 <br>
-<img src="Spamton_Battle_Static.png" alt="spamton" width="72" height="98">
+<img src="Spamton_battle_static.png" alt="spamton" width="72" height="98">
 <img src="twotime.png" alt="twotime" width="75" height="71">
 <br>
 <audio controls> 
