--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE HTML>
 <html>
+<head>
 <title> idk </title>
+<link rel="icon" type="image/x-icon" href="favicon.ico">
+</head>
 <body style="background-color:black">
 <h1 style="color:white"> soos </h1>
 <img src="Soos.png" alt="soos" width="120" height="250">
