--- a/index.html
+++ b/index.html
@@ -6,12 +6,14 @@
 </head>
 <body style="background-color:black">
 <h1 style="color:white"> soos </h1>
-<img src="Soos.png" alt="soos" width="120" height="250">
+<a href="https://www.google.com/search?q=soos&rlz=1C1GCEA_enUS1132US1132&oq=soos&gs_lcrp=EgZjaHJvbWUqBggAEEUYOzIGCAAQRRg7MgoIARAAGLEDGIAEMgcIAhAAGIAEMgcIAxAAGIAEMgcIBBAAGIAEMg0IBRAAGIMBGLEDGIAEMgcIBhAAGIAEMgYIBxBFGDzSAQgxNzI3ajBqN6gCALACAA&sourceid=chrome&ie=UTF-8&safe=active&ssui=on">
+<img src="Soos.png" alt="soos" width="120" height="250"></a>
 <br>
 <center>
 <p style="color:white"> spamton and two time </p>
 <br>
-<img src="Spamton_Battle_Static.png" alt="spamton" width="72" height="98">
+<a href="https://www.google.com/search?q=spamton&rlz=1C1GCEA_enUS1132US1132&oq=spamton&gs_lcrp=EgZjaHJvbWUqBggAEEUYOzIGCAAQRRg7MgoIARAAGLEDGIAEMg0IAhAAGIMBGLEDGIAEMg0IAxAAGIMBGLEDGIAEMgcIBBAAGIAEMgYIBRBFGDwyBggGEEUYPDIGCAcQRRg80gEIMTk2NWowajeoAgCwAgA&sourceid=chrome&ie=UTF-8&safe=active&ssui=on">
+<img src="Spamton_Battle_Static.png" alt="spamton" width="72" height="98"></a>
 <img src="twotime.png" alt="twotime" width="75" height="71">
 <br>
 <audio controls> 
