--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <p style="color:white"> spamton and two time </p>
 <br>
 <a href="https://www.google.com/search?q=spamton&rlz=1C1GCEA_enUS1132US1132&oq=spamton&gs_lcrp=EgZjaHJvbWUqBggAEEUYOzIGCAAQRRg7MgoIARAAGLEDGIAEMg0IAhAAGIMBGLEDGIAEMg0IAxAAGIMBGLEDGIAEMgcIBBAAGIAEMgYIBRBFGDwyBggGEEUYPDIGCAcQRRg80gEIMTk2NWowajeoAgCwAgA&sourceid=chrome&ie=UTF-8&safe=active&ssui=on">
-<img src="Spamton_Battle_Static.png" alt="spamton" width="72" height="98"></a>
+<img src="Spamton_battle_static.png" alt="spamton" width="72" height="98"></a>
 <img src="twotime.png" alt="twotime" width="75" height="71">
 <br>
 <audio controls> 
