--- a/index.html
+++ b/index.html
@@ -2,10 +2,16 @@
 <html>
 <head>
 <title> idk </title>
+<style>
+p, marquee, h1{
+color: white
+}
+</style>
 <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body style="background-color:black">
-<h1 style="color:white"> soos </h1>
+<h1> soos </h1>
+<marquee> :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 :3 </marquee>
 <a href="https://www.google.com/search?q=soos&rlz=1C1GCEA_enUS1132US1132&oq=soos&gs_lcrp=EgZjaHJvbWUqBggAEEUYOzIGCAAQRRg7MgoIARAAGLEDGIAEMgcIAhAAGIAEMgcIAxAAGIAEMgcIBBAAGIAEMg0IBRAAGIMBGLEDGIAEMgcIBhAAGIAEMgYIBxBFGDzSAQgxNzI3ajBqN6gCALACAA&sourceid=chrome&ie=UTF-8&safe=active&ssui=on">
 <img src="Soos.png" alt="soos" width="120" height="250"></a>
 <br>
@@ -14,7 +20,8 @@
 <br>
 <a href="https://www.google.com/search?q=spamton&rlz=1C1GCEA_enUS1132US1132&oq=spamton&gs_lcrp=EgZjaHJvbWUqBggAEEUYOzIGCAAQRRg7MgoIARAAGLEDGIAEMg0IAhAAGIMBGLEDGIAEMg0IAxAAGIMBGLEDGIAEMgcIBBAAGIAEMgYIBRBFGDwyBggGEEUYPDIGCAcQRRg80gEIMTk2NWowajeoAgCwAgA&sourceid=chrome&ie=UTF-8&safe=active&ssui=on">
 <img src="Spamton_battle_static.png" alt="spamton" width="72" height="98"></a>
-<img src="twotime.png" alt="twotime" width="75" height="71">
+<a href="https://www.google.com/search?q=two+time+forsaken&rlz=1C1GCEA_enUS1132US1132&oq=two+time+f&gs_lcrp=EgZjaHJvbWUqDwgAEEUYOxiDARixAxiABDIPCAAQRRg7GIMBGLEDGIAEMgYIARBFGDkyBwgCEAAYgAQyBwgDEAAYgAQyBwgEEAAYgAQyBwgFEAAYgAQyBwgGEAAYgAQyBwgHEAAYgAQyBwgIEAAYgAQyBwgJEAAYgATSAQg0MDczajBqN6gCALACAA&sourceid=chrome&ie=UTF-8&safe=active&ssui=on">
+<img src="twotime.png" alt="twotime" width="75" height="71"></a>
 <br>
 <audio controls> 
 <source src="Spamton.mp3" type="audio/mpeg">
@@ -22,7 +29,8 @@
 <br>
 <p style="color:white"> master chief hitting the griddy </p>
 <br>
-<img src="masterchiefgriddy.gif" alt="griddy" width="450" height="640">
+<a href="https://www.google.com/search?q=master+chief&rlz=1C1GCEA_enUS1132US1132&oq=master+chief&gs_lcrp=EgZjaHJvbWUyBggAEEUYOTIKCAEQABixAxiABDIHCAIQABiABDIHCAMQABiABDIKCAQQABixAxiABDIHCAUQABiABDIHCAYQABiABDIGCAcQRRg80gEINTUxOGowajeoAgCwAgA&sourceid=chrome&ie=UTF-8&safe=active&ssui=on">
+<img src="masterchiefgriddy.gif" alt="griddy" width="450" height="640"></a>
 <br>
 <p style="color:white"> bluudude </p>
 <br>
